2002-11-06  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/ietf/ATM2-MIB: added (RFC 3606).

2002-10-02  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/data.c: Fixed a bug with pending (forward, but not
	resolved) definitions of identifiers that appear again in a
	subsequently loaded module. Thanks to Fredrick.
	
	* mibs/ietf/ETHER-WIS: added (RFC 3637).

2003-10-01  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/ietf/EtherLike-MIB: updated (RFC 3635).

	* mibs/ietf/MAU-MIB: updated (RFC 3636).

2003-09-15  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/ietf/IPV6-FLOW-LABEL-MIB: added (RFC 3595).

2003-09-03  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/ietf/OPT-IF-MIB: added (RFC 3591).

	* mibs/ietf/SONET-MIB: updated (RFC 3592).

	* mibs/ietf/PerfHist-TC-MIB: updated (RFC 3593).

2003-08-07  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* pibs/ietf/FRAMEWORK-FEEDBACK-PIB: added (RFC 3571).

2003-06-20  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/ietf/BLDG-HVAC-MIB: added (RFC 3512) (it's just an
	example MIB).

	* mibs/ietf/MALLOC-MIB: added (RFC 3559).

2003-03-08  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* pibs/ietf/DIFFSERV-PIB: added (RFC 3317).

	* pibs/ietf/FRAMEWORK-PIB,FRAMEWORK-TC-PIB: added (RFC 3318).

	* mibs/ietf/APS-MIB: added (RFC 3498).

2003-01-03  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/ietf/ADSL-LINE-EXT-MIB: added (RFC 3440).

2002-12-26  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/ietf/HC-ALARM-MIB: added (RFC 3434).

2002-12-22  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/ietf/ENTITY-SENSOR-MIB: added (RFC 3433).

	* pibs/*: Moved PIBs from mibs/tubs/* to pibs/* and adapted
	Makefiles and configure script accordingly.

2002-12-19  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/ietf/{SNMP-FRAMEWORK-MIB,SNMP-MPD-MIB,SNMP-NOTIFICATION-MIB,
	SNMP-PROXY-MIB,SNMP-TARGET-MIB,SNMP-USER-BASED-SM-MIB,
	SNMP-VIEW-BASED-ACM-MIB,SNMPv2-MIB,SNMPv2-TM}: updated to
	Full Standard (RFCs 3411-3418).
